# docs/swagger.json
@@ -1,4 +1,7 @@
 {
+    "schemes": [
+        "http"
+    ],
     "swagger": "2.0",
     "info": {
         "description": "server API for Question Board Application.",
@@ -1675,7 +1678,7 @@
                         "ApiKey": []
                     }
                 ],
-                "description": "Route Path for Answer Evaluate Quesition.",
+                "description": "Route Path for Answer Evaluation Quest.",
                 "consumes": [
                     "application/json"
                 ],
@@ -1683,10 +1686,16 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Questionnaire"
+                    "Evaluate"
                 ],
                 "summary": "Create New Quest",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "class",
+                        "name": "class",
+                        "in": "query"
+                    },
                     {
                         "type": "integer",
                         "description": "teacher id",
@@ -1776,6 +1785,74 @@
                                             "items": {
                                                 "$ref": "#/definitions/response.SubjectWithTeacher"
                                             }
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/response.MessageOnly"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/response.MessageOnly"
+                        }
+                    },
+                    "417": {
+                        "description": "Expectation Failed",
+                        "schema": {
+                            "$ref": "#/definitions/response.Error"
+                        }
+                    }
+                }
+            }
+        },
+        "/teacher/evaluate": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKey": []
+                    }
+                ],
+                "description": "Route Path for Get Quest Response By Quest ID.",
+                "tags": [
+                    "Evaluate"
+                ],
+                "summary": "Quest Response By Quest ID",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "subject id",
+                        "name": "subject_id",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "class",
+                        "name": "class",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/response.MessageData"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/response.QuestResponses"
                                         }
                                     }
                                 }
@@ -2157,7 +2234,7 @@
                 "answer": {
                     "type": "string"
                 },
-                "evaluate_teacher": {
+                "evaluateTeacher": {
                     "$ref": "#/definitions/models.EvaluateTeacher"
                 },
                 "evaluate_teacher_id": {
@@ -2267,8 +2344,8 @@
         "response.AvailableQuestList": {
             "type": "object",
             "properties": {
-                "created_by": {
-                    "$ref": "#/definitions/models.User"
+                "creator": {
+                    "$ref": "#/definitions/response.UserList"
                 },
                 "description": {
                     "type": "string"
